# upload-image

./: .gitignore  Cargo.toml  README.md
esp32cam-upload-http/: esp32cam-upload-http.ino
esp32cam-upload-image/: esp32cam-upload-image.ino
esp32cam-upload-websockets/: esp32cam-upload-websockets.ino
src/: main.rs
